Include missing plugin name in outdated plugin infobar

BUG=none
R=bauerb@chromium.org

Change-Id: Ia241e571e4e48290c9c612253a00156b44d92b0e
Bug: 725510
Reviewed-on: https://chromium-review.googlesource.com/512823
Commit-Queue: Jochen Eisinger <jochen@chromium.org>
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#473903}
Former-commit-id: 83bff9171fc8e6f7376b7797a1e9d4bc21dfd666